--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NASA POD</string>
+    <string name="wiki_helper_text">Max query text size is</string>
+    <string name="search_wiki">Type something</string>
+    <string name="photo_of_the_day_stub">photo of the day</string>
 </resources>
