--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="yesterday">Yesterday</string>
     <string name="random">Random</string>
     <string name="today">Today</string>
+
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="select_theme">Select theme</string>
+    <string name="appearance">Appearance</string>
+    <string name="dark_mode">Dark mode</string>
+    <string name="about">About</string>
+
 </resources>
