--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="grey_theme">grey</string>
     <string name="solarized_theme">solarized</string>
     <string name="explore">Explore</string>
+    <string name="tap_to_like">tap to like</string>
+    <string name="tap_to_search_in_wiki">tap to search in wiki</string>
 
 </resources>
